parser/pascalParser.cpp

// Generated from pascal.g4 by ANTLR 4.13.0


#include "pascalVisitor.h"

#include "pascalParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct PascalParserStaticData final {
  PascalParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PascalParserStaticData(const PascalParserStaticData&) = delete;
  PascalParserStaticData(PascalParserStaticData&&) = delete;
  PascalParserStaticData& operator=(const PascalParserStaticData&) = delete;
  PascalParserStaticData& operator=(PascalParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag pascalParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
PascalParserStaticData *pascalParserStaticData = nullptr;

void pascalParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (pascalParserStaticData != nullptr) {
    return;
  }
#else
  assert(pascalParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<PascalParserStaticData>(
    std::vector<std::string>{
      "variable", "program", "const_variable_declaration_list", "const_variable_declaration", 
      "variable_declaration_list", "variable_declaration_sublist", "type_identifier", 
      "compound_statement", "statement_list", "statement", "assignment_statement", 
      "write_statement", "write", "writeln", "writeable", "read_statement", 
      "if_statement", "expr", "sexpr", "compared_expression"
    },
    std::vector<std::string>{
      "", "'const'", "'var'", "'.'", "':'", "','", "'integer'", "'begin'", 
      "'end'", "':='", "'write'", "'('", "')'", "'writeln'", "'read'", "'if'", 
      "'then'", "'else'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'*'", 
      "'div'", "'mod'", "'+'", "'-'", "", "';'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "E", "NE", "L", "LE", "G", "GE", "MUL", "DIV", "MOD", "ADD", "SUB", 
      "NUM", "SEP", "NEWLINE", "STRING_CONSTANT", "ID", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  pascalParserStaticData = staticData.release();
}

}

pascalParser::pascalParser(TokenStream *input) : pascalParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

pascalParser::pascalParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  pascalParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *pascalParserStaticData->atn, pascalParserStaticData->decisionToDFA, pascalParserStaticData->sharedContextCache, options);
}

pascalParser::~pascalParser() {
  delete _interpreter;
}

const atn::ATN& pascalParser::getATN() const {
  return *pascalParserStaticData->atn;
}

std::string pascalParser::getGrammarFileName() const {
  return "pascal.g4";
}

const std::vector<std::string>& pascalParser::getRuleNames() const {
  return pascalParserStaticData->ruleNames;
}

const dfa::Vocabulary& pascalParser::getVocabulary() const {
  return pascalParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView pascalParser::getSerializedATN() const {
  return pascalParserStaticData->serializedATN;
}


//----------------- VariableContext ------------------------------------------------------------------

pascalParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::VariableContext::ID() {
  return getToken(pascalParser::ID, 0);
}


size_t pascalParser::VariableContext::getRuleIndex() const {
  return pascalParser::RuleVariable;
}


std::any pascalParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::VariableContext* pascalParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 0, pascalParser::RuleVariable);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    match(pascalParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

pascalParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pascalParser::Compound_statementContext* pascalParser::ProgramContext::compound_statement() {
  return getRuleContext<pascalParser::Compound_statementContext>(0);
}

pascalParser::Const_variable_declaration_listContext* pascalParser::ProgramContext::const_variable_declaration_list() {
  return getRuleContext<pascalParser::Const_variable_declaration_listContext>(0);
}

pascalParser::Variable_declaration_listContext* pascalParser::ProgramContext::variable_declaration_list() {
  return getRuleContext<pascalParser::Variable_declaration_listContext>(0);
}


size_t pascalParser::ProgramContext::getRuleIndex() const {
  return pascalParser::RuleProgram;
}


std::any pascalParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ProgramContext* pascalParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 2, pascalParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == pascalParser::T__0) {
      setState(42);
      match(pascalParser::T__0);
      setState(43);
      const_variable_declaration_list();
    }
    setState(48);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == pascalParser::T__1) {
      setState(46);
      match(pascalParser::T__1);
      setState(47);
      variable_declaration_list();
    }
    setState(50);
    compound_statement();
    setState(51);
    match(pascalParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_variable_declaration_listContext ------------------------------------------------------------------

pascalParser::Const_variable_declaration_listContext::Const_variable_declaration_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<pascalParser::Const_variable_declarationContext *> pascalParser::Const_variable_declaration_listContext::const_variable_declaration() {
  return getRuleContexts<pascalParser::Const_variable_declarationContext>();
}

pascalParser::Const_variable_declarationContext* pascalParser::Const_variable_declaration_listContext::const_variable_declaration(size_t i) {
  return getRuleContext<pascalParser::Const_variable_declarationContext>(i);
}


size_t pascalParser::Const_variable_declaration_listContext::getRuleIndex() const {
  return pascalParser::RuleConst_variable_declaration_list;
}


std::any pascalParser::Const_variable_declaration_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitConst_variable_declaration_list(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::Const_variable_declaration_listContext* pascalParser::const_variable_declaration_list() {
  Const_variable_declaration_listContext *_localctx = _tracker.createInstance<Const_variable_declaration_listContext>(_ctx, getState());
  enterRule(_localctx, 4, pascalParser::RuleConst_variable_declaration_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    const_variable_declaration();
    setState(57);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == pascalParser::ID) {
      setState(54);
      const_variable_declaration();
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_variable_declarationContext ------------------------------------------------------------------

pascalParser::Const_variable_declarationContext::Const_variable_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::Const_variable_declarationContext::ID() {
  return getToken(pascalParser::ID, 0);
}

pascalParser::Type_identifierContext* pascalParser::Const_variable_declarationContext::type_identifier() {
  return getRuleContext<pascalParser::Type_identifierContext>(0);
}

tree::TerminalNode* pascalParser::Const_variable_declarationContext::E() {
  return getToken(pascalParser::E, 0);
}

tree::TerminalNode* pascalParser::Const_variable_declarationContext::NUM() {
  return getToken(pascalParser::NUM, 0);
}

tree::TerminalNode* pascalParser::Const_variable_declarationContext::SEP() {
  return getToken(pascalParser::SEP, 0);
}


size_t pascalParser::Const_variable_declarationContext::getRuleIndex() const {
  return pascalParser::RuleConst_variable_declaration;
}


std::any pascalParser::Const_variable_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitConst_variable_declaration(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::Const_variable_declarationContext* pascalParser::const_variable_declaration() {
  Const_variable_declarationContext *_localctx = _tracker.createInstance<Const_variable_declarationContext>(_ctx, getState());
  enterRule(_localctx, 6, pascalParser::RuleConst_variable_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    match(pascalParser::ID);
    setState(61);
    match(pascalParser::T__3);
    setState(62);
    type_identifier();
    setState(63);
    match(pascalParser::E);
    setState(64);
    match(pascalParser::NUM);
    setState(65);
    match(pascalParser::SEP);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_declaration_listContext ------------------------------------------------------------------

pascalParser::Variable_declaration_listContext::Variable_declaration_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<pascalParser::Variable_declaration_sublistContext *> pascalParser::Variable_declaration_listContext::variable_declaration_sublist() {
  return getRuleContexts<pascalParser::Variable_declaration_sublistContext>();
}

pascalParser::Variable_declaration_sublistContext* pascalParser::Variable_declaration_listContext::variable_declaration_sublist(size_t i) {
  return getRuleContext<pascalParser::Variable_declaration_sublistContext>(i);
}


size_t pascalParser::Variable_declaration_listContext::getRuleIndex() const {
  return pascalParser::RuleVariable_declaration_list;
}


std::any pascalParser::Variable_declaration_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitVariable_declaration_list(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::Variable_declaration_listContext* pascalParser::variable_declaration_list() {
  Variable_declaration_listContext *_localctx = _tracker.createInstance<Variable_declaration_listContext>(_ctx, getState());
  enterRule(_localctx, 8, pascalParser::RuleVariable_declaration_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    variable_declaration_sublist();
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == pascalParser::ID) {
      setState(68);
      variable_declaration_sublist();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_declaration_sublistContext ------------------------------------------------------------------

pascalParser::Variable_declaration_sublistContext::Variable_declaration_sublistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> pascalParser::Variable_declaration_sublistContext::ID() {
  return getTokens(pascalParser::ID);
}

tree::TerminalNode* pascalParser::Variable_declaration_sublistContext::ID(size_t i) {
  return getToken(pascalParser::ID, i);
}

pascalParser::Type_identifierContext* pascalParser::Variable_declaration_sublistContext::type_identifier() {
  return getRuleContext<pascalParser::Type_identifierContext>(0);
}

tree::TerminalNode* pascalParser::Variable_declaration_sublistContext::SEP() {
  return getToken(pascalParser::SEP, 0);
}


size_t pascalParser::Variable_declaration_sublistContext::getRuleIndex() const {
  return pascalParser::RuleVariable_declaration_sublist;
}


std::any pascalParser::Variable_declaration_sublistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitVariable_declaration_sublist(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::Variable_declaration_sublistContext* pascalParser::variable_declaration_sublist() {
  Variable_declaration_sublistContext *_localctx = _tracker.createInstance<Variable_declaration_sublistContext>(_ctx, getState());
  enterRule(_localctx, 10, pascalParser::RuleVariable_declaration_sublist);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(pascalParser::ID);
    setState(79);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == pascalParser::T__4) {
      setState(75);
      match(pascalParser::T__4);
      setState(76);
      match(pascalParser::ID);
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(82);
    match(pascalParser::T__3);
    setState(83);
    type_identifier();
    setState(84);
    match(pascalParser::SEP);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_identifierContext ------------------------------------------------------------------

pascalParser::Type_identifierContext::Type_identifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t pascalParser::Type_identifierContext::getRuleIndex() const {
  return pascalParser::RuleType_identifier;
}


std::any pascalParser::Type_identifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitType_identifier(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::Type_identifierContext* pascalParser::type_identifier() {
  Type_identifierContext *_localctx = _tracker.createInstance<Type_identifierContext>(_ctx, getState());
  enterRule(_localctx, 12, pascalParser::RuleType_identifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(pascalParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Compound_statementContext ------------------------------------------------------------------

pascalParser::Compound_statementContext::Compound_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pascalParser::Statement_listContext* pascalParser::Compound_statementContext::statement_list() {
  return getRuleContext<pascalParser::Statement_listContext>(0);
}


size_t pascalParser::Compound_statementContext::getRuleIndex() const {
  return pascalParser::RuleCompound_statement;
}


std::any pascalParser::Compound_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitCompound_statement(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::Compound_statementContext* pascalParser::compound_statement() {
  Compound_statementContext *_localctx = _tracker.createInstance<Compound_statementContext>(_ctx, getState());
  enterRule(_localctx, 14, pascalParser::RuleCompound_statement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(pascalParser::T__6);
    setState(89);
    statement_list(0);
    setState(90);
    match(pascalParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Statement_listContext ------------------------------------------------------------------

pascalParser::Statement_listContext::Statement_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t pascalParser::Statement_listContext::getRuleIndex() const {
  return pascalParser::RuleStatement_list;
}

void pascalParser::Statement_listContext::copyFrom(Statement_listContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SimpleStatementContext ------------------------------------------------------------------

pascalParser::StatementContext* pascalParser::SimpleStatementContext::statement() {
  return getRuleContext<pascalParser::StatementContext>(0);
}

tree::TerminalNode* pascalParser::SimpleStatementContext::SEP() {
  return getToken(pascalParser::SEP, 0);
}

pascalParser::SimpleStatementContext::SimpleStatementContext(Statement_listContext *ctx) { copyFrom(ctx); }


std::any pascalParser::SimpleStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitSimpleStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ComplexStatementContext ------------------------------------------------------------------

std::vector<pascalParser::Statement_listContext *> pascalParser::ComplexStatementContext::statement_list() {
  return getRuleContexts<pascalParser::Statement_listContext>();
}

pascalParser::Statement_listContext* pascalParser::ComplexStatementContext::statement_list(size_t i) {
  return getRuleContext<pascalParser::Statement_listContext>(i);
}

pascalParser::ComplexStatementContext::ComplexStatementContext(Statement_listContext *ctx) { copyFrom(ctx); }


std::any pascalParser::ComplexStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitComplexStatement(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::Statement_listContext* pascalParser::statement_list() {
   return statement_list(0);
}

pascalParser::Statement_listContext* pascalParser::statement_list(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  pascalParser::Statement_listContext *_localctx = _tracker.createInstance<Statement_listContext>(_ctx, parentState);
  pascalParser::Statement_listContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 16;
  enterRecursionRule(_localctx, 16, pascalParser::RuleStatement_list, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<SimpleStatementContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(93);
    statement();
    setState(94);
    match(pascalParser::SEP);
    _ctx->stop = _input->LT(-1);
    setState(100);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<ComplexStatementContext>(_tracker.createInstance<Statement_listContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleStatement_list);
        setState(96);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(97);
        statement_list(2); 
      }
      setState(102);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

pascalParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pascalParser::Compound_statementContext* pascalParser::StatementContext::compound_statement() {
  return getRuleContext<pascalParser::Compound_statementContext>(0);
}

pascalParser::Assignment_statementContext* pascalParser::StatementContext::assignment_statement() {
  return getRuleContext<pascalParser::Assignment_statementContext>(0);
}

pascalParser::Write_statementContext* pascalParser::StatementContext::write_statement() {
  return getRuleContext<pascalParser::Write_statementContext>(0);
}

pascalParser::Read_statementContext* pascalParser::StatementContext::read_statement() {
  return getRuleContext<pascalParser::Read_statementContext>(0);
}

pascalParser::If_statementContext* pascalParser::StatementContext::if_statement() {
  return getRuleContext<pascalParser::If_statementContext>(0);
}


size_t pascalParser::StatementContext::getRuleIndex() const {
  return pascalParser::RuleStatement;
}


std::any pascalParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::StatementContext* pascalParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 18, pascalParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case pascalParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(103);
        compound_statement();
        break;
      }

      case pascalParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(104);
        assignment_statement();
        break;
      }

      case pascalParser::T__9:
      case pascalParser::T__12: {
        enterOuterAlt(_localctx, 3);
        setState(105);
        write_statement();
        break;
      }

      case pascalParser::T__13: {
        enterOuterAlt(_localctx, 4);
        setState(106);
        read_statement();
        break;
      }

      case pascalParser::T__14: {
        enterOuterAlt(_localctx, 5);
        setState(107);
        if_statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Assignment_statementContext ------------------------------------------------------------------

pascalParser::Assignment_statementContext::Assignment_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::Assignment_statementContext::ID() {
  return getToken(pascalParser::ID, 0);
}

pascalParser::ExprContext* pascalParser::Assignment_statementContext::expr() {
  return getRuleContext<pascalParser::ExprContext>(0);
}


size_t pascalParser::Assignment_statementContext::getRuleIndex() const {
  return pascalParser::RuleAssignment_statement;
}


std::any pascalParser::Assignment_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitAssignment_statement(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::Assignment_statementContext* pascalParser::assignment_statement() {
  Assignment_statementContext *_localctx = _tracker.createInstance<Assignment_statementContext>(_ctx, getState());
  enterRule(_localctx, 20, pascalParser::RuleAssignment_statement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(pascalParser::ID);
    setState(111);
    match(pascalParser::T__8);
    setState(112);
    expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Write_statementContext ------------------------------------------------------------------

pascalParser::Write_statementContext::Write_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pascalParser::WriteContext* pascalParser::Write_statementContext::write() {
  return getRuleContext<pascalParser::WriteContext>(0);
}

pascalParser::WritelnContext* pascalParser::Write_statementContext::writeln() {
  return getRuleContext<pascalParser::WritelnContext>(0);
}


size_t pascalParser::Write_statementContext::getRuleIndex() const {
  return pascalParser::RuleWrite_statement;
}


std::any pascalParser::Write_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitWrite_statement(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::Write_statementContext* pascalParser::write_statement() {
  Write_statementContext *_localctx = _tracker.createInstance<Write_statementContext>(_ctx, getState());
  enterRule(_localctx, 22, pascalParser::RuleWrite_statement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(116);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case pascalParser::T__9: {
        enterOuterAlt(_localctx, 1);
        setState(114);
        write();
        break;
      }

      case pascalParser::T__12: {
        enterOuterAlt(_localctx, 2);
        setState(115);
        writeln();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WriteContext ------------------------------------------------------------------

pascalParser::WriteContext::WriteContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pascalParser::WriteableContext* pascalParser::WriteContext::writeable() {
  return getRuleContext<pascalParser::WriteableContext>(0);
}


size_t pascalParser::WriteContext::getRuleIndex() const {
  return pascalParser::RuleWrite;
}


std::any pascalParser::WriteContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitWrite(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::WriteContext* pascalParser::write() {
  WriteContext *_localctx = _tracker.createInstance<WriteContext>(_ctx, getState());
  enterRule(_localctx, 24, pascalParser::RuleWrite);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(pascalParser::T__9);
    setState(119);
    match(pascalParser::T__10);
    setState(120);
    writeable();
    setState(121);
    match(pascalParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WritelnContext ------------------------------------------------------------------

pascalParser::WritelnContext::WritelnContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
